Added basic subscribe mailer functionality, as well as edite the video page to prevent recommended vids and remain on bottom.

--- a/app/views/contact/index.html.erb
+++ b/app/views/contact/index.html.erb
@@ -32,21 +32,22 @@
     </div>
   </div>
 
-  <form class="subscribe-box">
+
+  <%= form_tag url_for(:controller => 'contact', :action => 'user_subscribe'), :method => 'post', :class=>'subscribe-box' do %>
     <h3>Subscribe to Muro's Mailing List</h3>
 
     <div class="input">
-      <input type="text" name="name" placeholder="Name">
+      <%= text_field_tag :name, nil, placeholder: 'Name' %>
     </div>
 
     <div class="input">
-      <input type="email" name="email" placeholder="Email">
+      <%= email_field_tag :email, nil, placeholder: 'Email' %>
     </div>
 
     <div class="">
-      <input class="submit" type="submit" value="Subscribe">
+      <%= submit_tag "Subscribe", :class=>"submit" %>
     </div>
-  </form>
+  <% end %>
 </section>
 
 <section id="contact-form" class="group">
@@ -70,7 +71,7 @@
   <div class="input">
     <label for="model">Product Interest</label>
     <select class="model-number" name="countries">
-        <option value="<%= nil %>">-- Please Select a Tool Model --
+        <option value="<%= nil %>">-- Please Select a Tool --
       <% @tools.each do |tool| %>
         <option value="<%= tool.product_code %>"><%= tool.product_code %></option>
       <% end %>
@@ -109,4 +110,6 @@
   </div>
 </form>
 </section>
+
+
 
