--- a/app/views/applications/commercial_roofing.html.erb
+++ b/app/views/applications/commercial_roofing.html.erb
@@ -18,37 +18,37 @@ with our Auto Feed Screw Driving systems at your disposal.</h3>
 <section class="tools-for-job group">
   <h3>Tools For The Job</h3>
   <article>
-    <a href=""><img src="/applications/roofing/ch7260.png" alt="Ultra Driver Auto Feed Screw Driver"></a>
+    <a href="<%= products_tool_path(:id=>3) %>"><img src="/applications/roofing/ch7260.png" alt="Ultra Driver Auto Feed Screw Driver"></a>
     <div>
-      <h4><a href="">CH7260 - Metal Pro Tool</a></h4>
-      <p>Tool designed for a variety of #10 &amp; #12 diameter fasteners. Forget about working bent over, stand up for any job! <strong><a href="">Find out more.</a></strong></p>
+      <h4><a href="<%= products_tool_path(:id=>3) %>">CH7260 - Metal Pro Tool</a></h4>
+      <p>Tool designed for a variety of #10 &amp; #12 diameter fasteners. Forget about working bent over, stand up for any job! <strong><a href="<%= products_tool_path(:id=>3) %>">Find out more.</a></strong></p>
     </div>
   </article>
 
   <article>
-    <a href=""><img src="/applications/roofing/commercial/ch7271wu.png" alt="CH7271WU Auto Feed Screw Driver "></a>
+    <a href="<%= products_tool_path(:id=>2) %>"><img src="/applications/roofing/commercial/ch7241wu.png" alt="CH7241WU Auto Feed Screw Driver "></a>
     <div>
-      <h4><a href="">CH7241WU</a></h4>
+      <h4><a href="<%= products_tool_path(:id=>2) %>">CH7241WU</a></h4>
       <p>
-Tool to drive pan head stitching screws - up to #10 diameter. Yes, even while standing up. <strong><a href="">Find out more.</a></strong></p>
+Tool to drive pan head stitching screws - up to #10 diameter. Yes, even while standing up. <strong><a href="<%= products_tool_path(:id=>2) %>">Find out more.</a></strong></p>
     </div>
   </article>
 
    <article>
-    <a href=""><img src="/applications/roofing/commercial/lhvl32.png" alt="LHVL32 Auto Feed Screw Driver "></a>
+    <a href="<%= products_tool_path(:id=>8) %>"><img src="/applications/roofing/commercial/lhvl32.png" alt="LHVL32 Auto Feed Screw Driver "></a>
     <div>
-      <h4><a href="">LHVL32</a></h4>
+      <h4><a href="<%= products_tool_path(:id=>8) %>">LHVL32</a></h4>
       <p>
-System to drive hex head screws with rubber washers. Perfect for metal cladding. <strong><a href="">Find out more.</a></strong></p>
+System to drive hex head screws with rubber washers. Perfect for metal cladding. <strong><a href="<%= products_tool_path(:id=>8) %>">Find out more.</a></strong></p>
     </div>
   </article>
 
    <article>
-    <a href=""><img src="/applications/roofing/shvl62.png" alt="SHVL62 Auto Feed Screw Driver "></a>
+    <a href="<%= products_tool_path(:id=>9) %>"><img src="/applications/roofing/shvl62.png" alt="SHVL62 Auto Feed Screw Driver "></a>
     <div>
-      <h4><a href="">SHVL62</a></h4>
+      <h4><a href="<%= products_tool_path(:id=>9) %>">SHVL62</a></h4>
       <p>
-Created for those larger roofing jobs (75 screws per coil). Handles a variety of screws, with or without rubber washers. <strong><a href="">Find out more.</a></strong></p>
+Created for those larger roofing jobs (75 screws per coil). Handles a variety of screws, with or without rubber washers. <strong><a href="<%= products_tool_path(:id=>9) %>">Find out more.</a></strong></p>
     </div>
   </article>
 
