--- a/app/views/applications/decks_docks_marine_boardwalk.html.erb
+++ b/app/views/applications/decks_docks_marine_boardwalk.html.erb
@@ -17,18 +17,18 @@
 <section class="tools-for-job group">
 	<h3>Tools For The Job</h3>
 	<article>
-		<a href=""><img src="/applications/decks/speed-driver.png" alt="Speed Driver Auto Feed Screw Driver with Handle"></a>
+		<a href="<%= products_tool_path(:id=>5) %>"><img src="/applications/decks/speed-driver.png" alt="Speed Driver Auto Feed Screw Driver with Handle"></a>
 		<div>
-			<h4><a href="">FDVL41 - Speed Driver</a></h4>
+			<h4><a href="<%= products_tool_path(:id=>5) %>">FDVL41 - Speed Driver</a></h4>
 			<p>Purpose built, industrial strength coil feed system for the discriminating contractor.  No pre-drilling required - even for exotic hardwoods.
 			Stands up to any job thrown at it.
  			<strong><%= link_to "Find out more", products_tool_path(:id=>5)%></strong>.</p>
 		</div>
 	</article>
 	<article>
-		<a href=""><img src="/applications/decks/ultra-driver.png" alt="Speed Driver Auto Feed Screw Driver with Handle"></a>
+		<a href="<%= products_tool_path(:id=>1) %>"><img src="/applications/decks/ultra-driver.png" alt="Speed Driver Auto Feed Screw Driver with Handle"></a>
 		<div>
-			<h4><a href="">CH7390 - Ultra Driver</a></h4>
+			<h4><a href="<%= products_tool_path(:id=>1) %>">CH7390 - Ultra Driver</a></h4>
 			<p>The lighter-weight strip feed alternative. Ergonomically friendly and drives screws in a flash. No pre-drilling required - even for exotic hardwoods.
 			<strong><%= link_to "Find out more", products_tool_path(:id=>1)%></strong>.</p>
 		</div>
