--- a/app/views/applications/flooring.html.erb
+++ b/app/views/applications/flooring.html.erb
@@ -21,19 +21,20 @@ and underlayment with ease.
 <section class="tools-for-job group">
 	<h3>Tools For The Job</h3>
 	<article>
-		<a href=""><img src="/applications/flooring/speed-driver.png" alt="Speed Driver Auto Feed Screw Driver with Handle"></a>
+		<a href="<%= products_tool_path(:id=>5) %>"><img src="/applications/flooring/speed-driver.png" alt="Speed Driver Auto Feed Screw Driver with Handle"></a>
+		<a href="<%= products_tool_path(:id=>5) %>"><img src="/applications/flooring/speed-driver.png" alt="Speed Driver Auto Feed Screw Driver with Handle"></a>
 		<div>
-			<h4><a href="">FDVL41 - Speed Driver</a></h4>
+			<h4><a href="<%= products_tool_path(:id=>5) %>">FDVL41 - Speed Driver</a></h4>
 			<p>Purpose built, industrial strength coil feed system for the discriminating contractor. 150 screws per coil - largest payload in the industry. Stands up to any job thrown at it.
 <strong><a href="">Find out more.</a></strong></p>
 		</div>
 	</article>
 	<article>
-		<a href=""><img src="/applications/flooring/ultra-pro.png" alt="Ultra Pro Driver Auto Feed Screw Driver with Handle"></a>
+		<a href="<%= products_tool_path(:id=>1) %>"><img src="/applications/flooring/ultra-pro.png" alt="Ultra Pro Driver Auto Feed Screw Driver with Handle"></a>
 		<div>
-			<h4><a href="">CH7392SF - Ultra Driver
+			<h4><a href="<%= products_tool_path(:id=>1) %>">CH7392SF - Ultra Driver
 </a></h4>
-			<p>The lighter-weight strip feed alternative. Ergonomically friendly and drives screws in a flash with a 4000 rpm motor.<br><strong><a href=""> Find out more.</a></strong></p>
+			<p>The lighter-weight strip feed alternative. Ergonomically friendly and drives screws in a flash with a 4000 rpm motor.<br><strong><a href="<%= products_tool_path(:id=>1) %>"> Find out more.</a></strong></p>
 		</div>
 	</article>
 
