--- a/app/views/applications/residential_roofing.html.erb
+++ b/app/views/applications/residential_roofing.html.erb
@@ -23,18 +23,18 @@ Screw Driving systems at your disposal.</h3>
     </div>
   </article>
   <article>
-    <a href=""><img src="/applications/roofing/residential/lpvl62.png" alt="LPVL62 Auto Feed System"></a>
+    <a href="<%= products_tool_path(:id=>9) %>"><img src="/applications/roofing/residential/lpvl62.png" alt="LPVL62 Auto Feed System"></a>
     <div>
-      <h4><a href="">LPVL62 - Auto Feed Screw Driver</a></h4>
-      <p>Purpose built coil feed system for the tile roof contractor. Highest payload - 150 screws per coil. Able to handle any tile job. <br><strong><a href="">Find out more.</a></strong></p>
+      <h4><a href="<%= products_tool_path(:id=>9) %>">LPVL62 - Auto Feed Screw Driver</a></h4>
+      <p>Purpose built coil feed system for the tile roof contractor. Highest payload - 150 screws per coil. Able to handle any tile job. <br><strong><a href="<%= products_tool_path(:id=>9) %>">Find out more.</a></strong></p>
     </div>
   </article>
 
   <article>
-    <a href=""><img src="/applications/roofing/shvl62.png" alt="SHVL62 Auto Feed System"></a>
+    <a href="<%= products_tool_path(:id=>9) %>"><img src="/applications/roofing/shvl62.png" alt="SHVL62 Auto Feed System"></a>
     <div>
-      <h4><a href="">SHVL62</a></h4>
-      <p>Created for those larger roofing jobs (75 screws per coil). Handles a variety of screws, with or without rubber washers. <br><strong><a href="">Find out more.</a></strong></p>
+      <h4><a href="<%= products_tool_path(:id=>9) %>">SHVL62</a></h4>
+      <p>Created for those larger roofing jobs (75 screws per coil). Handles a variety of screws, with or without rubber washers. <br><strong><a href="<%= products_tool_path(:id=>9) %>">Find out more.</a></strong></p>
     </div>
   </article>
 </section>
