--- a/app/views/applications/trailer_bus_rv.html.erb
+++ b/app/views/applications/trailer_bus_rv.html.erb
@@ -22,19 +22,19 @@
 <section class="tools-for-job group">
 	<h3>Tools For The Job</h3>
 	<article>
-		<a href=""><img src="/applications/trailer/power-driver.png" alt="Power Driver Auto Feed Screw Driver with Handle"></a>
+		<a href="<%= products_tool_path(:id=>4) %>"><img src="/applications/trailer/power-driver.png" alt="Power Driver Auto Feed Screw Driver with Handle"></a>
 		<div>
-			<h4><a href="">FLVL41 - Power Driver</a></h4>
+			<h4><a href="<%= products_tool_path(:id=>4) %>">FLVL41 - Power Driver</a></h4>
 			<p>Purpose built tool for securing lighter gauge floors (wood to steel or aluminum) for OEM's. No one else compares.
-<strong><a href="">Find out more.</a></strong></p>
+<strong><a href="<%= products_tool_path(:id=>4) %>">Find out more.</a></strong></p>
 		</div>
 	</article>
 	<article>
-		<a href=""><img src="/applications/trailer/heavy-duty-driver.png" alt="Heavy Duty Driver Auto Feed Screw Driver with Handle"></a>
+		<a href="<%= products_tool_path(:id=>6) %>"><img src="/applications/trailer/heavy-duty-driver.png" alt="Heavy Duty Driver Auto Feed Screw Driver with Handle"></a>
 		<div>
-			<h4><a href="">HDVL71 - Heavy Duty Driver
+			<h4><a href="<%= products_tool_path(:id=>6) %>">HDVL71 - Heavy Duty Driver
 </a></h4>
-			<p>Tailor made solution for securing heavy gauge floors (wood to steel or aluminum). The heaviest duty system on the market. 100 screws per coil. No one else compares. <strong><a href=""> Find out more.</a></strong></p>
+			<p>Tailor made solution for securing heavy gauge floors (wood to steel or aluminum). The heaviest duty system on the market. 100 screws per coil. No one else compares. <strong><a href="<%= products_tool_path(:id=>6) %>"> Find out more.</a></strong></p>
 		</div>
 	</article>
 	<article>
