--- a/app/views/applications/drywall.html.erb
+++ b/app/views/applications/drywall.html.erb
@@ -18,27 +18,27 @@ Once you try it you’ll never go back.</h3>
 <section class="tools-for-job group">
 	<h3>Tools For The Job</h3>
 	<article>
-		<a href=""><img src="/applications/drywall/easy-driver.png" alt="Easy Driver Auto Feed Screw Driver"></a>
+		<a href="<%= products_tool_path(:id=>2) %>"><img src="/applications/drywall/easy-driver.png" alt="Easy Driver Auto Feed Screw Driver"></a>
 		<div>
-			<h4><a href="">CH7241DE - Easy Driver - Electric</a></h4>
+			<h4><a href="<%= products_tool_path(:id=>2) %>">CH7241DE - Easy Driver - Electric</a></h4>
 			<p>Muro's strip feed drywall system for wood or metal studs - it's all the same... Easy! Counter sunk heads - perfect every time. Turns everyone into a pro!
-<strong><a href="">Find out more.</a></strong></p>
+<strong><a href="<%= products_tool_path(:id=>2) %>">Find out more.</a></strong></p>
 		</div>
 	</article>
 
 	<article>
-		<a href=""><img src="/applications/drywall/coil-hex-auto.png" alt="Coil Hex Auto Feed System"></a>
+		<a href="<%= products_tool_path(:id=>7) %>"><img src="/applications/drywall/coil-hex-auto.png" alt="Coil Hex Auto Feed System"></a>
 		<div>
-			<h4><a href="">LWVL32 - Coil Auto Feed System</a></h4>
-			<p>Dual-speed screw driver for maximum versatility. The LWVL32 fastens drywall boards simply and easily. Location of tool motor provides excellent balance for one hand operation. <strong><a href="">Find out more.</a></strong></p>
+			<h4><a href="<%= products_tool_path(:id=>7) %>">LWVL32 - Coil Auto Feed System</a></h4>
+			<p>Dual-speed screw driver for maximum versatility. The LWVL32 fastens drywall boards simply and easily. Location of tool motor provides excellent balance for one hand operation. <strong><a href="<%= products_tool_path(:id=>7) %>">Find out more.</a></strong></p>
 		</div>
 	</article>
 
 	<article>
-		<a href=""><img src="/applications/drywall/ch7241_wireless.png" alt="Coil Hex Auto Feed System"></a>
+		<a href="<%= products_tool_path(:id=>2) %>"><img src="/applications/drywall/ch7241_wireless.png" alt="Coil Hex Auto Feed System"></a>
 		<div>
-			<h4><a href="">CH7241DE - Easy Driver - Cordless</a></h4>
-			<p>Great for wood or metal stud jobs. All done without cords. <br><strong><a href="">Find out more.</a></strong></p>
+			<h4><a href="<%= products_tool_path(:id=>2) %>">CH7241DE - Easy Driver - Cordless</a></h4>
+			<p>Great for wood or metal stud jobs. All done without cords. <br><strong><a href="<%= products_tool_path(:id=>2) %>">Find out more.</a></strong></p>
 		</div>
 	</article>
 
