Edited products manuals pags.

--- a/app/views/customer_service/product_manuals.html.erb
+++ b/app/views/customer_service/product_manuals.html.erb
@@ -58,26 +58,32 @@
     </p>
 
     <%= link_to "/customer_service/product_manuals/LPVL62-Manual.pdf", :target=>"_blank" do %>
-      <div class="see_more_button popup no-left">
+      <div class="see_more_button popup three-per-line no-left">
         <h3>LPVL62</h3>
       </div>
     <% end %>
 
     <%= link_to "/customer_service/product_manuals/EDVL62-Manual.pdf", :target=>"_blank" do %>
-      <div class="see_more_button popup">
+      <div class="see_more_button three-per-line popup">
         <h3>EDVL62</h3>
       </div>
     <% end %>
 
     <%= link_to "/customer_service/product_manuals/EFVL62-Manual.pdf", :target=>"_blank" do %>
-      <div class="see_more_button popup">
+      <div class="see_more_button three-per-line popup ">
         <h3>EFVL62</h3>
       </div>
     <% end %>
 
     <%= link_to "/customer_service/product_manuals/SPVL62-Manual.pdf", :target=>"_blank" do %>
-      <div class="see_more_button popup">
+      <div class="see_more_button three-per-line popup no-left">
         <h3>SPVL62</h3>
+      </div>
+    <% end %>
+
+    <%= link_to "/customer_service/product_manuals/SHVL62-Manual.pdf", :target=>"_blank" do %>
+      <div class="see_more_button three-per-line popup">
+        <h3>SHVL62</h3>
       </div>
     <% end %>
   </div>
