Finished first round of edits (21 page) for today

--- a/app/views/customer_service/faqs.html.erb
+++ b/app/views/customer_service/faqs.html.erb
@@ -1,5 +1,5 @@
 <h2 class="heading">FREQUENTLY ASKED QUESTIONS</h2>
-<p>See if your question has already been answered below in this list of Frequently Asked Questiions if you don’t find your question here feel free to visit our <strong><a href="<%= contact_path %>">Contact Section</a></strong> and connect with us through our online form. <br><br>Muro attachments can only be mounted to a Drywall Screw Guns (the unit must have a clutch). Mounting hardware is unique to each Brand and model. Please refer to the <strong><a href="<%= customer_service_product_manuals_path %>">Tool Manuals</a></strong> for more details.</p>
+<p>See if your question has already been answered in our list of Frequently Asked Questiions. If you don’t find your question answered here feel free to visit our <strong><a href="<%= contact_path %>">Contact Section</a></strong> and connect with us through our online form. <br><br>Muro attachments can only be mounted to a Drywall Screw Gun (the unit must have a clutch). Mounting hardware is unique to each Brand and model. Please refer to the <strong><a href="<%= customer_service_product_manuals_path %>">Tool Manuals</a></strong> for more details.</p>
 
 
 <div class="faq group">
@@ -11,7 +11,7 @@
   <img id="faq_arrow_1" class="faq_arrow" src="/customer_service/faq_arrow.png" alt="frequently asked question">
 
   <div class="answer" id="answer1">
-    <span class="A">A.</span><p>Muro bits are a higher quality than the standards bits you would normally purchase, and all our bits are double ended – two tips (except for hex drive bits). That being said, life expectancy will vary depending on application and experience of the user. The key to long bit life is to make sure you keep constant pressure on the tool while the screw is being driven, do not to let the bit slip out of the screw
+    <span class="A">A.</span><p>Muro bits are a higher quality than the standard bits you normally purchase, and all our bits are double ended – two tips (except for hex drive bits). That being said, life expectancy will vary depending on application and experience of the user. The key to long bit life is to make sure you keep constant pressure on the tool while the screw is being driven, do not to let the bit slip out of the screw
 recess; if the bit happens to stick in the recess, it is extremely important to pull straight up – do not
 wiggle the tool side to side.
 
@@ -85,7 +85,7 @@ disengage the lock nut, set it to your optimum working height and then re-tighte
   <img class="faq_arrow" id="faq_arrow_6" id="faq_arrow_6" src="/customer_service/faq_arrow.png" alt="frequently asked question">
 
   <div class="answer" id="answer6">
-    <span class="A">A.</span><p>Using Muro can be faster, most times much faster, except it is not just about the speed; there are many other benefits that can only be realized after an extended period and many advantages are unique to certain applications, industries or users. “Try it you’ll like it” has never been truer!</p>
+    <span class="A">A.</span><p>Using Muro can be faster, most times much faster, except it is not just about the speed. There are many other benefits that can only be realized after an extended period of time and many advantages are unique to certain applications, industries or users. “Try it you’ll like it” has never been truer!</p>
   </div>
 </div>
 
@@ -163,7 +163,7 @@ disengage the lock nut, set it to your optimum working height and then re-tighte
   <img class="faq_arrow" id="faq_arrow_12" src="/customer_service/faq_arrow.png" alt="frequently asked question">
 
   <div class="answer" id="answer12">
-    <span class="A">A.</span><p>Muro attachments can only be mounted to a Drywall Screw Guns (the unit must have a clutch). Mounting hardware is unique to each Brand and model. Please click here to see which models we can mount to.</p>
+    <span class="A">A.</span><p>Muro attachments can only be mounted to a Drywall Screw Guns (the unit must have a clutch). Mounting hardware is unique to each Brand and model. Please <strong><a href="<%= customer_service_product_manuals_path %>">click here</a></strong> to see which models we can mount to.</p>
   </div>
 </div>
 
