--- a/app/views/downloads/brochures.html.erb
+++ b/app/views/downloads/brochures.html.erb
@@ -1,5 +1,5 @@
 <h2 class="heading">BROCHURES</h2>
-  <p> Below are the product brochures for Muro North America's tools. Click to view each product manual in PDF format.</p>
+  <p> Below are the product brochures for Muro North America's tools. Click to view each brochure in PDF format.</p>
 
 <section id="tool-brochures" class="group brochures">
   <h3>Tool Brochures</h3>
@@ -29,7 +29,7 @@
   </div>
 
   <div class="selection tool brochure">
-    <a class="backdrop" href="/downloads/brochures/HDVL71-brochure.pdf" target="_blank"><img src="/products/tools/index/heavy-duty-driver.png" alt="HDVL71 - Heavy Duty Driver"><img class="icon" src="/downloads/brochure-icon.png" alt=""></a>
+    <a class="backdrop" href="/downloads/brochures/PowerHeavyDuty_Apr13.pdf" target="_blank"><img src="/products/tools/index/heavy-duty-driver.png" alt="HDVL71 - Heavy Duty Driver"><img class="icon" src="/downloads/brochure-icon.png" alt=""></a>
     <%= link_to "HDVL71 - Heavy Duty Driver",  "/downloads/brochures/HDVL71-brochure.pdf", :target=>"_blank" %>
   </div>
 
