--- a/app/views/downloads/videos.html.erb
+++ b/app/views/downloads/videos.html.erb
@@ -4,34 +4,9 @@
 
 <section id="videos">
   <div class="video">
-
-    <iframe src="https://www.youtube.com/embed/QMI3z1PjxKA?rel=0&wmode=transparent" frameborder="0" allowfullscreen></iframe>
-    <h4><a href="https://youtu.be/QMI3z1PjxKA" target="_blank">What Trades Want - Muro Product Review</a></h4>
-    <p>The boys over at What Trades Want did a review of our collated auto-feed screw guns in action. They test out a couple of our tools to see how they perform in a variety of applications.</p>
-  </div>
-
-  <div class="video">
-    <iframe src="https://www.youtube.com/embed/1dYX4F3YTKE?rel=0&wmode=transparent" frameborder="0" allowfullscreen></iframe>
-    <h4><a href="https://youtu.be/1dYX4F3YTKE" target="_blank">Deck Builder - Muro Product Review</a></h4>
-    <p>Andy Wormer with Professional Deck Builder magazine talks with us about Muro's auto feed screw driving system. Here we demonstrate the coil and strip feed systems that are designed for countless applications.</p>
-  </div>
-
-  <div class="video">
-    <iframe src="https://www.youtube.com/embed/WGZocGgz86A?rel=0&wmode=transparent" frameborder="0" allowfullscreen></iframe>
-    <h4><a href="https://youtu.be/WGZocGgz86A" target="_blank">Speed Driver – Decking</a></h4>
-    <p>Who would have thought driving 3” screws into 2” X 6” PT lumber could be so easy? Muro Speed Driver (FDVL41) lets you leave every job early; you can relax knowing that you exceeded expectations!</p>
-  </div>
-
-  <div class="video">
-    <iframe src="https://www.youtube.com/embed/pU--YN50RU8?rel=0&wmode=transparent" frameborder="0" allowfullscreen></iframe>
-    <h4><a href="https://youtu.be/pU--YN50RU8" target="_blank">Ultra Driver – Decking</a></h4>
-    <p>Contractor or DIY’er, Muro turns everyone into a pro. Watch how easy deck building has become when you have the right tool – don’t be swayed by inferior brands. Choose Muro, the inventors of Auto Feed Technology!</p>
-  </div>
-
-  <div class="video">
-    <iframe src="https://www.youtube.com/embed/4R1EXEjS7Go?rel=0&wmode=transparent" frameborder="0" allowfullscreen></iframe>
-    <h4><a href="https://youtu.be/4R1EXEjS7Go" target="_blank">Comp. Lumber Decks</a></h4>
-    <p>Save your back and knees by turning that two day job into a neat 4 hour project. Wouldn’t you like to be like Gary “I am going home”.</p>
+    <iframe src="https://www.youtube.com/embed/2jjjoVbJj8s?rel=0&wmode=transparent" frameborder="0" allowfullscreen></iframe>
+    <h4><a href="https://youtu.be/CdcRx7NIxc0" target="_blank">Trailer Floors</a></h4>
+    <p>If you build trailers we can help. Watch how easily the EFVL62 tool drives screws through 2” X 6” PT boards and into 3” square tube. Isn’t it time for you to get the Muro advantage?</p>
   </div>
 
   <div class="video">
@@ -41,16 +16,9 @@
   </div>
 
   <div class="video">
-    <iframe src="https://www.youtube.com/embed/TAaRL0DgSsk?rel=0&wmode=transparent" frameborder="0" allowfullscreen></iframe>
-    <h4><a href="https://youtu.be/TAaRL0DgSsk" target="_blank">Speed Driver - Decking 2</a></h4>
-    <p>No job too big or too small for the Muro Speed Driver (FDVL41). Become the envy of every jobsite!</p>
-  </div>
-
-  <div class="video">
-    <iframe src="https://www.youtube.com/embed/3ei1GCa9_XM?rel=0&wmode=transparent" frameborder="0" allowfullscreen></iframe>
-    <h4><a href="https://youtu.be/3ei1GCa9_XM" target="_blank">Bus Floor</a></h4>
-    <p>Shuttle Bus manufacturing simplified. Watch the Power Driver (FLVL41) in action, effortlessly driving screws through 5/8” plywood into a 16ga steel frame. Many bus manufacturers are now driving their business with Muro, shouldn’t you?
-</p>
+    <iframe src="https://www.youtube.com/embed/4R1EXEjS7Go?rel=0&wmode=transparent" frameborder="0" allowfullscreen></iframe>
+    <h4><a href="https://youtu.be/4R1EXEjS7Go" target="_blank">Composite Lumber Decks</a></h4>
+    <p>Save your back and knees by turning that two day job into a neat 4 hour project. Wouldn’t you like to be like Gary “I am going home”.</p>
   </div>
 
   <div class="video">
@@ -61,15 +29,41 @@
   </div>
 
   <div class="video">
-    <iframe src="https://www.youtube.com/embed/2jjjoVbJj8s?rel=0&wmode=transparent" frameborder="0" allowfullscreen></iframe>
-    <h4><a href="https://youtu.be/CdcRx7NIxc0" target="_blank">Trailer Floors</a></h4>
-    <p>If you build trailers we can help. Watch how easily the EFVL62 tool drives screws through 2” X 6” PT boards and into 3” square tube. Isn’t it time for you to get the Muro advantage?</p>
+    <iframe src="https://www.youtube.com/embed/WGZocGgz86A?rel=0&wmode=transparent" frameborder="0" allowfullscreen></iframe>
+    <h4><a href="https://youtu.be/WGZocGgz86A" target="_blank">Speed Driver – Decking</a></h4>
+    <p>Who would have thought driving 3” screws into 2” X 6” PT lumber could be so easy? Muro Speed Driver (FDVL41) lets you leave every job early; you can relax knowing that you exceeded expectations!</p>
   </div>
 
+  <div class="video">
+    <iframe src="https://www.youtube.com/embed/3ei1GCa9_XM?rel=0&wmode=transparent" frameborder="0" allowfullscreen></iframe>
+    <h4><a href="https://youtu.be/3ei1GCa9_XM" target="_blank">Bus Floor</a></h4>
+    <p>Shuttle Bus manufacturing simplified. Watch the Power Driver (FLVL41) in action, effortlessly driving screws through 5/8” plywood into a 16ga steel frame. Many bus manufacturers are now driving their business with Muro, shouldn’t you?
+</p>
+  </div>
 
+  <div class="video">
+    <iframe src="https://www.youtube.com/embed/TAaRL0DgSsk?rel=0&wmode=transparent" frameborder="0" allowfullscreen></iframe>
+    <h4><a href="https://youtu.be/TAaRL0DgSsk" target="_blank">Speed Driver - Decking 2</a></h4>
+    <p>No job too big or too small for the Muro Speed Driver (FDVL41). Become the envy of every jobsite!</p>
+  </div>
 
+  <div class="video">
+    <iframe src="https://www.youtube.com/embed/pU--YN50RU8?rel=0&wmode=transparent" frameborder="0" allowfullscreen></iframe>
+    <h4><a href="https://youtu.be/pU--YN50RU8" target="_blank">Ultra Driver – Decking</a></h4>
+    <p>Contractor or DIY’er, Muro turns everyone into a pro. Watch how easy deck building has become when you have the right tool – don’t be swayed by inferior brands. Choose Muro, the inventors of Auto Feed Technology!</p>
+  </div>
 
+  <div class="video">
+    <iframe src="https://www.youtube.com/embed/QMI3z1PjxKA?rel=0&wmode=transparent" frameborder="0" allowfullscreen></iframe>
+    <h4><a href="https://youtu.be/QMI3z1PjxKA" target="_blank">What Trades Want - Muro Product Review</a></h4>
+    <p>The boys over at What Trades Want did a review of our collated auto-feed screw guns in action. They test out a couple of our tools to see how they perform in a variety of applications.</p>
+  </div>
 
+  <div class="video">
+    <iframe src="https://www.youtube.com/embed/1dYX4F3YTKE?rel=0&wmode=transparent" frameborder="0" allowfullscreen></iframe>
+    <h4><a href="https://youtu.be/1dYX4F3YTKE" target="_blank">Deck Builder - Muro Product Review</a></h4>
+    <p>Andy Wormer with Professional Deck Builder magazine talks with us about Muro's auto feed screw driving system. Here we demonstrate the coil and strip feed systems that are designed for countless applications.</p>
+  </div>
 </section>
 
 
