--- a/app/views/products/accessories.html.erb
+++ b/app/views/products/accessories.html.erb
@@ -11,7 +11,7 @@ with each accessory. Click the button below to view our <a href="/products/acces
 <div class="accessory">
   <h3>Screw Pouch</h3>
   <h4>Description</h4>
-  <p>Complete with belt clip, keeps a bundle of screws
+  <p>Complete with belt clip, keeps a bundle of screw
 strips close at hand for quick loading.</p>
   <div class="display">
     <img src="/products/accessories/screw-pouch.png" alt="Screw Pouch">
