--- a/app/views/contact/find_us.html.erb
+++ b/app/views/contact/find_us.html.erb
@@ -12,10 +12,14 @@
     L6T 3T4
   </strong></p>
 
-  <p>
+  <p style="margin-top: 20px";>
     Our Muro North America Inc. Headquarters is
     located just off hwy 410, northwest of Toronto in
     Brampton, Ontario.
+  </p>
+
+  <p style="margin-top: 20px;">
+    Please <a href="<%= contact_path %>">contact us</a> directly to find a distributor in your area.
   </p>
 </div>
 
