Updated accessories page, and added scroll to top function for screws pages.

--- a/app/views/products/screws/show.html.erb
+++ b/app/views/products/screws/show.html.erb
@@ -5,7 +5,7 @@
 <% end %>
 
 
-<div class="product">
+<div class="product" id="screws_top">
   <h1><%= @tool.product_code %> <%= @tool.name %> - Screws</h1>
 
   <% @tool.screws.order('id ASC').each do |screw| %>
@@ -40,3 +40,26 @@
     <% @prev_screw = screw %>
   <% end %>
 </div>
+
+<a href="#screws_top" class="go-top">Back To Top</a>
+
+<script>
+// The JavaScript to add/remove CSS classes to the back to top button when scroll down/up.
+  $(window).scroll(function(event){
+  var scroll = $(window).scrollTop();
+    if (scroll >= 100) {
+      $(".go-top").addClass("show");
+    } else {
+      $(".go-top").removeClass("show");
+    }
+});
+
+  $('.go-top').click(function(){
+  $('html, body').animate({
+    scrollTop: $( $(this).attr('href') ).offset().top
+  }, 1000);
+});
+
+
+</script>
+
