--- a/app/assets/stylesheets/buttons.scss
+++ b/app/assets/stylesheets/buttons.scss
@@ -53,3 +53,34 @@
     margin-left: 10;
   }
 
+/* Go Back to Top Button */
+
+.go-top {
+  display: inline-block;
+  padding: 5px 10px;
+  line-height: 35px;
+  text-align: center;
+  font-size: 30px;
+  position: fixed;
+  bottom: -40px;
+  right: 20px;
+  -webkit-transition: all 1s ease;
+  -moz-transition: all 1s ease;
+  -o-transition: all 1s ease;
+  transition: all 1s ease;
+  background-color: #404040;
+  color: #FFFFFF;
+  text-decoration: none;
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+  border-radius: 5px;
+  font-size: 1em;
+}
+
+.go-top.show { bottom: 20px; }
+
+.go-top:hover {
+  background-color: $green;
+  color: #FFFFFF;
+}
+
