Completed changes for April 14 sent by Victor.

--- a/app/views/applications/trailer_bus_rv.html.erb
+++ b/app/views/applications/trailer_bus_rv.html.erb
@@ -38,12 +38,12 @@
 		</div>
 	</article>
 	<article>
-		<a href=""><img src="/applications/trailer/ch7260-wall-skinning.png" alt="CH7260 - Wall Skinning"></a>
+		<a href="<%= products_tool_path(:id=>3) %>"><img src="/applications/trailer/ch7260-wall-skinning.png" alt="CH7260 - Wall Skinning"></a>
 		<div>
-			<h4><a href="">CH7260 - Metal Pro
+			<h4><a href="<%= products_tool_path(:id=>3) %>">CH7260 - Metal Pro
 </a></h4>
 			<p>This tool coupled with our wall skinning screw provides a unique solution for side wall fabrication.
-<strong><a href=""> Find out more.</a></strong></p>
+<strong><a href="<%= products_tool_path(:id=>3) %>"> Find out more.</a></strong></p>
 		</div>
 	</article>
 
