--- a/app/views/downloads/videos.html.erb
+++ b/app/views/downloads/videos.html.erb
@@ -53,7 +53,7 @@
     <p>Contractor or DIY’er, Muro turns everyone into a pro. Watch how easy deck building has become when you have the right tool – don’t be swayed by inferior brands. Choose Muro, the inventors of Auto Feed Technology!</p>
   </div>
 
-  <div class="video">
+  <div class="video" id="wtw">
     <iframe src="https://www.youtube.com/embed/QMI3z1PjxKA?rel=0&wmode=transparent" frameborder="0" allowfullscreen></iframe>
     <h4><a href="https://youtu.be/QMI3z1PjxKA" target="_blank">What Trades Want - Muro Product Review</a></h4>
     <p>The boys over at What Trades Want did a review of our collated auto-feed screw guns in action. They test out a couple of our tools to see how they perform in a variety of applications.</p>
