--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -38,10 +38,10 @@
 		<section id="news" class="group">
 			<article class="no-margin-left">
 
-				<a href=""><img src="home/what-trades-want.jpg" alt="Review video done by What Trades Want"></a>
+				<a href="/downloads/videos#wtw"><img src="home/what-trades-want.jpg" alt="Review video done by What Trades Want"></a>
 
 				<div class="written">
-					<h3><a href="<%= downloads_videos_path %>">What Trades Want</a></h3>
+					<h3><a href="/downloads/videos#wtw">What Trades Want</a></h3>
 					<p>
 						The boys over at What Trades Want did a review of our collated auto-feed screw guns in action. They test out a couple of our tools to see how they perform in a variety of applications.
 					</p>
@@ -49,7 +49,7 @@
 			</article>
 
 			<article>
-				<a href=""><img src="home/bunch-of-tools.jpg" alt="Muro has a wide variety of tools"></a>
+				<a href="<%= applications_more_applications_path %>"><img src="home/bunch-of-tools.jpg" alt="Muro has a wide variety of tools"></a>
 
 				<div class="written">
 					<h3><a href="<%= applications_more_applications_path %>">We Have a Tool For Almost Every Job</a></h3>
