--- a/app/views/distributors/north_america.html.erb
+++ b/app/views/distributors/north_america.html.erb
@@ -17,6 +17,10 @@
     Fax: 905-451-7936<br>
     Toll Free: 1-800-665-MURO (6876)
   </p>
+
+  <p style="margin-top: 20px;">
+    Please <a href="<%= contact_path %>">contact us</a> directly to find a distributor in your area.
+  </p>
 </div>
 
 
