Articles pages added to navigation. Debugging contact form popup.

--- a/app/assets/stylesheets/downloads.scss
+++ b/app/assets/stylesheets/downloads.scss
@@ -112,3 +112,18 @@
       }
     }
   }
+
+
+//-------------------------
+// Main
+//-------------------------
+
+section#downloads {
+  .block {
+    width: 33%;
+    display: inline-block;
+    margin: 0;
+  }
+}
+
+
