--- a/app/assets/stylesheets/popup.scss
+++ b/app/assets/stylesheets/popup.scss
@@ -8,7 +8,7 @@
     top:0px;
     left:0px;
 }
-#toPopup, #parts_and_schematics_popup {
+#toPopup, #parts_and_schematics_popup, #notice_popup {
     font-family: "lucida grande",tahoma,verdana,arial,sans-serif;
     background: none repeat scroll 0 0 #FFFFFF;
     border: 10px solid #ccc;
