--- a/app/views/downloads/index.html.erb
+++ b/app/views/downloads/index.html.erb
@@ -1,9 +1,14 @@
 <h1 class="index heading">DOWNLOADS</h1>
 
-<section class="list-four videos">
+<section class="list-four videos" id="downloads">
   <div class="block">
     <h3><%= link_to "BROCHURES", downloads_brochures_path %></h3>
     <a href="<%= downloads_brochures_path %>"><img class="select" src="/downloads/brochures.png" alt="Brochures"></a>
+  </div>
+
+  <div class="block">
+    <h3><%= link_to "ARTICLES", downloads_articles_path %></h3>
+    <a href="<%= downloads_articles_path %>"><img class="select" src="/downloads/articles.png" alt="Articles"></a>
   </div>
 
   <div class="block">
