--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -98,6 +98,7 @@
 			<li class="downloads"><%= link_to "DOWNLOADS", downloads_path %>
 				<ul>
 					<li class="no-margin-top"><%= link_to "Brochures", downloads_brochures_path %></li>
+					<li><%= link_to "Articles", downloads_articles_path %></li>
 					<li><%= link_to "Videos", downloads_videos_path %></li>
 				</ul>
 			</li>
@@ -119,6 +120,17 @@
     <p class="clear">First time users please <strong><a href="<%= contact_path %>">contact</a> Muro for your access codes.</p>
 	</div>
 
+	<!-- <div id="notice">
+
+		<div id="notice_popup">
+		  <div class="close"></div>
+
+
+	    <p>Make sure this box appears</p>
+	  </div>
+
+	</div>
+ -->
 
 
 
@@ -181,6 +193,7 @@
 				<ul class="downloads">
 					<h5><a href="<%= downloads_path %>">Downloads</a></h5>
 					<li class="no-margin-top"><%= link_to "Brochures", downloads_brochures_path %></li>
+					<li><%= link_to "Articles", downloads_articles_path %></li>
 					<li><%= link_to "Videos", downloads_videos_path %></li>
 				</ul>
 			</div>
