--- a/app/assets/stylesheets/contact.scss
+++ b/app/assets/stylesheets/contact.scss
@@ -62,6 +62,8 @@
   input {
     border: 2px solid $green;
     box-sizing: border-box;
+    padding: 5px;
+    font-size: 1em;
   }
 
   input[type=submit] {
@@ -84,9 +86,5 @@
     text-align: center;
     display: inline;
     color: white;
-  }
-
-  input {
-    font-size: 1em;
   }
 }
