Fixed drop down list bug with dropdownReplacement JavaScript.

--- a/app/assets/stylesheets/customer_service.scss
+++ b/app/assets/stylesheets/customer_service.scss
@@ -34,9 +34,10 @@
   }
 
   input, select {
-    font-size: 1.3em;
+    font-size: 1em;
     width: 100%;
     box-sizing: border-box;
+    padding: 3px 0;
   }
 
 
