--- a/app/assets/stylesheets/popup.scss
+++ b/app/assets/stylesheets/popup.scss
@@ -71,3 +71,15 @@ div#popup_content {
 
   text-align: center;
 }
+
+#notice_popup {
+  h3 {
+    font-size: 1.3em;
+  }
+
+  p {
+    margin-top: 30px;
+    line-height: 1.3em;
+    font-size: 1.1em;
+  }
+}
