Readded slider code, changed drop down select buttons.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,8 +4,9 @@
   <title>Muro North America</title>
 
   <%= stylesheet_link_tag    'application', media: 'all' %>
-
+  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+
 
 </head>
 <body>
